tests with FFM: enable native access
This prevents a warning under JDK 24.